--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,51 @@
-# Dependencies
-node_modules/
-.pnp/
+# dependencies
+node_modules
+.pnp
 .pnp.js
 
-# Testing
-coverage/
+# testing
+coverage
 
-# Production
-build/
-dist/
+# next.js
 .next/
 out/
+build
+dist
 
-# Environment files
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Debug logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
 # IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+.idea
+.vscode
 
-# OS
-.DS_Store
-Thumbs.db
+# Logs
+logs
+*.log
 
 # AWS
 .aws/
-aws-exports.js
+aws-credentials.json
 
-# Logs
-*.log
-logs/ 
+# Supabase
+.supabase/
