--- a/amplify.yml
+++ b/amplify.yml
@@ -3,16 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
-        - cd gradmate-frontend
         - npm install
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: gradmate-frontend/.next
+    baseDirectory: out
     files:
       - "**/*"
   cache:
     paths:
-      - gradmate-frontend/node_modules/**/*
-      - gradmate-frontend/.next/cache/**/*
+      - node_modules/**/*
+      - .next/cache/**/*
