--- a/amplify.yml
+++ b/amplify.yml
@@ -3,15 +3,16 @@ frontend:
   phases:
     preBuild:
       commands:
+        - cd gradmate-frontend
         - npm install
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: out
+    baseDirectory: gradmate-frontend/.next
     files:
       - "**/*"
   cache:
     paths:
-      - node_modules/**/*
-      - .next/cache/**/*
+      - gradmate-frontend/node_modules/**/*
+      - gradmate-frontend/.next/cache/**/*
